--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
     />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container-fluid">
+          <p
+            class="navbar-brand text-center text-center text-white fw-bold fs-1"
+          >
+            Covid-19 Dahsboard
+          </p>
+        </div>
+      </nav>
+    </header>
+    <!-- main start -->
+    <main>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col">
+            <p class="fs-3">Covide-19 Current sition</p>
+          </div>
+        </div>
+      </div>
+    </main>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
