--- a/index.html
+++ b/index.html
@@ -30,11 +30,80 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col">
-            <p class="fs-3">Covide-19 Current sition</p>
+            <p class="fs-3 text-center fw-bold">Covide-19 Current situation</p>
+          </div>
+        </div>
+      </div>
+      <!-- new col -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="col">
+              <div
+                class="card text-dark bg-light mb-3"
+                style="max-width: 18rem"
+              >
+                <div class="card-body">
+                  <h5 class="card-title">Country</h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="container">
+              <div class="row row-cols-2">
+                <div class="col">
+                  <div
+                    class="card text-white bg-primary mb-3"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-body">
+                      <h5 class="card-title">New Confirmed</h5>
+                      <p class="card-text"></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div
+                    class="card text-dark bg-info mb-3"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-body">
+                      <h5 class="card-title">Total Confirmed</h5>
+                      <p class="card-text"></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div
+                    class="card text-dark bg-warning mb-3"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-body">
+                      <h5 class="card-title">New Deaths</h5>
+                      <p class="card-text"></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div
+                    class="card text-white bg-danger mb-3"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-body text-center">
+                      <h5 class="card-title">Total Deaths</h5>
+                      <p class="card-text"></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </main>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
